--- a/api/package.json
+++ b/api/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "fanapis-template",
-  "version": "0.1.0",
-  "homepage": "https://davidhuertas.github.io/BphmAPI",
+  "name": "BphmAPI",
+  "version": "0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "deploy": "gh-pages -d build"
+    "start": "next start"
   },
   "dependencies": {
     "apollo-server-core": "^3.6.2",
